--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Emailmaker by christinazou</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="screen">
-   <script src="js/main.js"></script>
+   <script src="js/main.js" type="text/javascript"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
