--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <title>Emailmaker by christinazou</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" media="screen">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+     <script>if(!window.jQuery) {document.write('<script src="lib/jquery.min.js"><\/script>')}</script>
    <script src="js/main.js" type="text/javascript"></script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-   <script>
-		if(!window.jQuery) {
-			document.write('<script src="lib/jquery.min.js"><\/script>')
-		}
-	</script>
+   
+  
   </head>
   <body>
 <textarea class="email"></textarea>
