--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     </div>
 
     <div class="selectcontainer">
+      <div class="info">
+        <input type="input"/>
+      </div>
       <div class="greeting">
         <h3>GREETINGS</h3>
 
