--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
   <body>
     <div class="emailcontainer">
       <textarea class="email">
+        <textarea class="email">
       </textarea>
       <input type="button" id="select_all_btn" value="select all" />
     </div>
 
     <div class="selectcontainer">
       <div class="info">
-        <input type="input"/>
+        <label>from</label><input type="input"/>
+        <label>to</label><input type="input"/>
       </div>
       <div class="greeting">
         <h3>GREETINGS</h3>
