--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <body>
     <div class="emailcontainer">
       <textarea class="email">
-        <textarea class="email">
+       
       </textarea>
       <input type="button" id="select_all_btn" value="select all" />
     </div>
 
     <div class="selectcontainer">
       <div class="info">
-        <label>from</label><input type="input"/>
-        <label>to</label><input type="input"/>
+        <label>from</label><input type="input" class="from"/>
+        <label>to</label><input type="input" class="to"/>
       </div>
       <div class="greeting">
         <h3>GREETINGS</h3>
