--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
           <ul>
             <li>
-              <input type="radio" name="1" id="Hi Dennis," value="Hi Dennis," />
-              <label for="Hi Dennis,">Hi Dennis,</label>
+              <input type="radio" name="1" id="Hi" value="Hi" />
+              <label for="Hi">Hi</label>
             </li>
 
             <li>
