--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             <input type="radio" name="6" id="" value="" />
              <label for=""></label>
           </li>
+          
+          <div class="selectcontainer">
+      <div class="info">
+        <label>from</label><input type="input" class="from"/>
+        <label>to</label><input type="input" class="to"/>
+      </div>
   <div class="emailcontainer">
     <textarea class="email">
     </textarea>
@@ -66,10 +72,10 @@
         <h4>Informal</h4>
 
         <ul>
-          <li>
-            <input type="radio" name="1" id="Hi Dennis," value="Hi Dennis," />
-            <label for="Hi Dennis,">Hi Dennis,</label>
-          </li>
+    <li>
+              <input type="radio" name="1" id="Hi" value="Hi" />
+              <label for="Hi">Hi Dennis,</label>
+            </li>
 
           <li>
             <input type="radio" name="1" id="Hello Claire," value="Hello Claire," />
