--- a/index.html
+++ b/index.html
@@ -17,16 +17,9 @@
   </head>
 
 <body>
-          <li>
-            <input type="radio" name="6" id="" value="" />
-             <label for=""></label>
-          </li>
+    <1--      <li><input type="radio" name="6" id="" value="" /><label for=""></label></li> -->
           
-          <div class="selectcontainer">
-      <div class="info">
-        <label>from</label><input type="input" class="from"/>
-        <label>to</label><input type="input" class="to"/>
-      </div>
+         
   <div class="emailcontainer">
     <textarea class="email">
     </textarea>
@@ -34,6 +27,10 @@
   </div>
 
   <div class="selectcontainer">
+      <div class="info">
+        <label>from</label><input type="input" class="from"/>
+        <label>to</label><input type="input" class="to"/>
+      </div>
     <div class="greeting">
       <h3>GREETINGS</h3>
 
