--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
 <body>
-    <1--      <li><input type="radio" name="6" id="" value="" /><label for=""></label></li> -->
+    <!--      <li><input type="radio" name="6" id="" value="" /><label for=""></label></li> -->
           
          
   <div class="emailcontainer">
