--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             </li>
 
           <li>
-            <input type="radio" name="1" id="Hello Claire," value="Hello Claire," />
-            <label for="Hello Claire,">Hello Claire,</label>
+            <input type="radio" name="1" id="Hello" value="Hello" />
+            <label for="Hello">Hello Claire,</label>
           </li>
 
           <li>
