data storage update

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
     </script>
     <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/jsonoperater.js" type="text/javascript"></script>
+
   </head>
 
 <body>
     <!--      <li><input type="radio" name="6" id="" value="" /><label for=""></label></li> -->
           
-         
+         <div class="test"></div>
   <div class="emailcontainer">
     <textarea class="email">
     </textarea>
