--- a/informalLetter.html
+++ b/informalLetter.html
@@ -18,7 +18,7 @@
     <!--      <li><input type="radio" name="6" id="" value="" /><label for=""></label></li> -->
     
     <div class="navbar">
-      <a href="./home.html">Home</a>
+      <a href="./index.html">Home</a>
       <a href="./formalLetter.html">Formal letter</a>
       <a href="./informalLetter.html">Informal letter</a>
     </div>
