--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <div class="navbar">
             <a href="./index.html">Home</a>
             <a href="./formalLetter.html">Formal letter</a>
-            <a href="./informalLetter.htm
-            l">Informal letter</a>
+            <a href="./informalLetter.html">Informal letter</a>
         </div>
 
         <div class="main">
