update home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8" />
-        <title>Emailmaker by christinazou</title>
+        <title>English Email Writer by Christinazou</title>
+        <meta name="description" content="This is an email writer that could help you compose an email in a few clicks."
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="stylesheets/afterReset.css" media="screen" />
@@ -15,17 +16,46 @@
         <script src="js/jsonoperater.js" type="text/javascript"></script>
     </head>
     <body>
-        <div class="navbar">
-            <a href="./index.html">Home</a>
-            <a href="./formalLetter.html">Formal letter</a>
-            <a href="./informalLetter.html">Informal letter</a>
-        </div>
 
         <div class="main">
-        <h1> email maker</h1>
+            <h1> Email Writer<span>fast and easy</span></h1>
+            <p> This is an email writer that could help you compose an email in a few clicks. </p>
+            <div>
+                <div class="card">
+                <a href="./informalLetter.html">
+                    <div class="container" id = "informal_sample" >
+                        <p>Hi John,
+                        </p>
+                        <p>   </p>
+                        <p>...
+                        </p>
+                    </div>
+                    <div class="container ">
+                        <p>
+                            Start writing an informal email
+                        </p>
+                    </div>
+                   </a>
+                </div>
+                <div class="card">
+                  <a href="./formalLetter.html">
+                    <div class="container " id = "formal_sample" >
+                        <p>Dear Dr Lee,
+                        </p>
+                        <p></p>
+                        <p>...
+                        </p>
+                    </div>
+                    <div class="container ">
+                        <p>
+                             Start writing an formal email
+                        </p>
+                    </div>
+                    </a>
+                </div>
+            </div>
             <p>
             When I first came to America, writing english email became vital part of my life. I spent a huge amount of time choosing my words, only hoping that the email looks normal. That's why I made this little tool. </p>
-
             <p>Most emails follow this structure:</p>
             <div class="structure" >
                 <p>
