--- a/informalLetter.html
+++ b/informalLetter.html
@@ -1,7 +1,7 @@
 <html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
-    <title>Emailmaker by christinazou</title>
+    <title>Informal Email － English Email Writer by Christinazou</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/afterReset.css" media="screen" />
@@ -17,11 +17,14 @@
   <body>
     <!--      <li><input type="radio" name="6" id="" value="" /><label for=""></label></li> -->
     
-    <div class="navbar">
-      <a href="./index.html">Home</a>
-      <a href="./formalLetter.html">Formal letter</a>
-      <a href="./informalLetter.html">Informal letter</a>
-    </div>
+         <!-- Start Navigation -->
+        <div class="navbar">
+            <a href="./index.html">Home</a>
+            <a href="./formalLetter.html">Formal letter</a>
+            <a href="./informalLetter.html">Informal letter</a>
+        </div>
+        <!-- End Navigation -->
+        
     <div class="emailcontainer">
       <textarea id="email"> </textarea>
       <input type="button" id="select_all_btn" value="select all" />
@@ -143,8 +146,8 @@
               <label for="Hope to hear from you soon.">Hope to hear from you soon.</label>
             </li>
             <li>
-              <input type="radio" name="5" id="I’m looking forward to seeing you" value="I’m looking forward to seeing you" />
-              <label for="I’m looking forward to seeing you">I’m looking forward to seeing you</label>
+              <input type="radio" name="5" id="I’m looking forward to seeing you." value="I’m looking forward to seeing you." />
+              <label for="I’m looking forward to seeing you.">I’m looking forward to seeing you.</label>
             </li>
           </ul>
       </div>
