bug fixed, sitemap updated

--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@
                 Although their structure is similar, formal emails and informal emails have a huge difference. So I made seperate webpage for them.
             </p>
         </div>
+        <footer> Christinazou@2017 </footer>
     </body>
 </html>
