--- a/informalLetter.html
+++ b/informalLetter.html
@@ -15,7 +15,8 @@
     <script src="js/jsonoperater.js" type="text/javascript"></script>
   </head>
   <body>
-    <!--      <li><input type="radio" name="6" id="" value="" /><label for=""></label></li> -->
+    <!--      <li><input type="radio" name="6" id="" value="" />  <div class="labelformat">
+    <label for=""></label></li> -->
     
          <!-- Start Navigation -->
         <div class="navbar">
@@ -55,15 +56,21 @@
           <ul class="accordion-section-content">
             <li>
               <input type="radio" name="1" id="Hi" value="Hi" class="needfirstname"/>
-              <label for="Hi">Hi,</label>
+                <div class="labelformat">
+                <label for="Hi">Hi,</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="1" id="Hello" value="Hello" class="needfirstname" />
-              <label for="Hello">Hello,</label>
+                <div class="labelformat">
+                <label for="Hello">Hello,</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="1" id="Dear" value="Dear" class="mustfirstname" />
-              <label for="Dear">Dear,</label>
+                <div class="labelformat">
+                <label for="Dear">Dear,</label>
+                </div>
             </li>
           </ul>
         </div>
@@ -73,19 +80,27 @@
           <ul class="accordion-section-content">
             <li>
               <input type="radio" name="2" id="Just a quick note to invite you to…/ to tell you that…" value="Just a quick note to invite you to…/ to tell you that…" />
-              <label for="Just a quick note to invite you to…/ to tell you that…">Just a quick note to invite you to…/ to tell you that…</label>
+                <div class="labelformat">
+                <label for="Just a quick note to invite you to…/ to tell you that…">Just a quick note to invite you to…/ to tell you that…</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="2" id="This is to invite you to join us for..." value="This is to invite you to join us for... "/>
-              <label for="This is to invite you to join us for...">This is to invite you to join us for...</label>
+                <div class="labelformat">
+                <label for="This is to invite you to join us for...">This is to invite you to join us for...</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="2" id="Thanks for your e-mail, it was wonderful/great to hear from you." value="Thanks for your e-mail, it was wonderful/great to hear from you." />
-              <label for="Thanks for your e-mail, it was wonderful/great to hear from you.">Thanks for your e-mail, it was wonderful/great to hear from you.</label>
+                <div class="labelformat">
+                <label for="Thanks for your e-mail, it was wonderful/great to hear from you.">Thanks for your e-mail, it was wonderful/great to hear from you.</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="2" id="I wanted to let you know that / tell you about / ask you if…" value="I wanted to let you know that / tell you about / ask you if…" />
-              <label for="I wanted to let you know that / tell you about / ask you if…">I wanted to let you know that / tell you about / ask you if…</label>
+                <div class="labelformat">
+                <label for="I wanted to let you know that / tell you about / ask you if…">I wanted to let you know that / tell you about / ask you if…</label>
+                </div>
             </li>
           </ul>
       </div>
@@ -95,19 +110,27 @@
           <ul class="accordion-section-content">
             <li>
               <input type="radio" name="3" id="I was wondering if you could come and see me sometime next week." value="I was wondering if you could come and see me sometime next week." />
-              <label for="I was wondering if you could come and see me sometime next week.">I was wondering if you could come and see me sometime next week.</label>
+                <div class="labelformat">
+                <label for="I was wondering if you could come and see me sometime next week.">I was wondering if you could come and see me sometime next week.</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="3" id="Would you mind coming early to help me clear up the place?" value="Would you mind coming early to help me clear up the place?" />
-              <label for="Would you mind coming early to help me clear up the place?">Would you mind coming early to help me clear up the place?</label>
+                <div class="labelformat">
+                <label for="Would you mind coming early to help me clear up the place?">Would you mind coming early to help me clear up the place?</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="3" id="Do you think you could call Jerry for me?" value="Do you think you could call Jerry for me?" />
-              <label for="Do you think you could call Jerry for me?">Do you think you could call Jerry for me?</label>
+                <div class="labelformat">
+                <label for="Do you think you could call Jerry for me?">Do you think you could call Jerry for me?</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="3" id="Can you call me/ get back to me asap? (as soon as possible)" value="Can you call me/ get back to me asap? (as soon as possible)" />
-              <label for="Can you call me/ get back to me asap? (as soon as possible)">Can you call me/ get back to me asap? (as soon as possible)</label>
+                <div class="labelformat">
+                <label for="Can you call me/ get back to me asap? (as soon as possible)">Can you call me/ get back to me asap? (as soon as possible)</label>
+                </div>
             </li>
           </ul>
       </div>
@@ -117,23 +140,33 @@
           <ul class="accordion-section-content">
             <li>
               <input type="radio" name="4" id="I’m sorry, but I can’t make it tomorrow." value="I’m sorry, but I can’t make it tomorrow." />
-              <label for="I’m sorry, but I can’t make it tomorrow.">I’m sorry, but I can’t make it tomorrow.</label>
+                <div class="labelformat">
+                <label for="I’m sorry, but I can’t make it tomorrow.">I’m sorry, but I can’t make it tomorrow.</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="4" id="I’m happy to tell you that John and I are getting married next month." value="I’m happy to tell you that John and I are getting married next month." />
-              <label for="I’m happy to tell you that John and I are getting married next month.">I’m happy to tell you that John and I are getting married next month.</label>
+                <div class="labelformat">
+                <label for="I’m happy to tell you that John and I are getting married next month.">I’m happy to tell you that John and I are getting married next month.</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="4" id="Would you like me to come early and help you clear up the place?" value="Would you like me to come early and help you clear up the place?" />
-              <label for="Would you like me to come early and help you clear up the place?">Would you like me to come early and help you clear up the place?</label>
+                <div class="labelformat">
+                <label for="Would you like me to come early and help you clear up the place?">Would you like me to come early and help you clear up the place?</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="6" id="How about I come and help you out?" value="How about I come and help you out?" />
-              <label for="How about I come and help you out?">How about I come and help you out?</label>
+                <div class="labelformat">
+                <label for="How about I come and help you out?">How about I come and help you out?</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="6" id="Do you need a hand with moving the furniture?" value="Do you need a hand with moving the furniture?" />
-              <label for="Do you need a hand with moving the furniture?">Do you need a hand with moving the furniture?</label>
+                <div class="labelformat">
+                <label for="Do you need a hand with moving the furniture?">Do you need a hand with moving the furniture?</label>
+                </div>
             </li>
           </ul>
       </div>
@@ -143,11 +176,15 @@
           <ul class="accordion-section-content">
             <li>
               <input type="radio" name="5" id="Hope to hear from you soon." value="Hope to hear from you soon." />
-              <label for="Hope to hear from you soon.">Hope to hear from you soon.</label>
+                <div class="labelformat">
+                <label for="Hope to hear from you soon.">Hope to hear from you soon.</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="5" id="I’m looking forward to seeing you." value="I’m looking forward to seeing you." />
-              <label for="I’m looking forward to seeing you.">I’m looking forward to seeing you.</label>
+                <div class="labelformat">
+                <label for="I’m looking forward to seeing you.">I’m looking forward to seeing you.</label>
+                </div>
             </li>
           </ul>
       </div>
@@ -157,23 +194,32 @@
           <ul class="accordion-section-content">
             <li>
               <input type="radio" name="6" id="Love," value="Love," />
-              <label for="Love,">Love,</label>
+                <div class="labelformat">
+                <label for="Love,">Love,</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="6" id="Thanks," value="Thanks," />
-              <label for="Thanks,">Thanks,</label>
+                <div class="labelformat">
+                <label for="Thanks,">Thanks,</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="6" id="Take care," value="Take care," />
-              <label for="Take care,">Take care,</label>
+                <div class="labelformat">
+                <label for="Take care,">Take care,</label>
+                </div>
             </li>
             <li>
               <input type="radio" name="6" id="Yours," value="Yours," />
-              <label for="Yours,">Yours,</label>
+                <div class="labelformat">
+                <label for="Yours,">Yours,</label>
+                </div>
             </li>
           </ul>
       
       </div>
     </div>
+            <footer> Christinazou@2017 </footer>
   </body>
 </html>
