--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>English Email Writer by Christinazou</title>
-        <meta name="description" content="This is an email writer that could help you compose an email in a few clicks."
+        <meta name="description" content="This is an email writer that could help you compose an email in a few clicks."/>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="stylesheets/afterReset.css" media="screen" />
