add Chinese version informal page

--- a/formalLetter.html
+++ b/formalLetter.html
@@ -23,7 +23,7 @@
       <a href="./index.html">Home</a>
       <a href="./formalLetter.html">Formal letter</a>
       <a href="./informalLetter.html">Informal letter</a>
-      <a class="navbarright" href="./formalLetterwithchinese.html">中文版</a>
+      <a class="navbarright" href="./formalwithchinese.html">中文版</a>
     </div>
     <!-- End Navigation -->
     <div class="emailcontainer">
