--- a/formalwithchinese.html
+++ b/formalwithchinese.html
@@ -20,8 +20,8 @@
     <!-- Start Navigation -->
     <div class="navbar">
       <a href="./index.html">首页/Home</a>
-      <a href="./formalLetter.html">正式邮件/Formal letter</a>
-      <a href="./informalLetter.html">非正式邮件/Informal letter</a>
+      <a href="./formalwithchinese.html">正式邮件/Formal letter</a>
+      <a href="./informalwithchinese.html">非正式邮件/Informal letter</a>
 <a class="navbarright" href="./formalLetter.html">English</a>
     </div>
     <!-- End Navigation -->
