--- a/informalwithchinese.html
+++ b/informalwithchinese.html
@@ -1,4 +1,5 @@
-<html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="zh-cmn" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
     <title>Informal Email － English Email Writer by Christinazou</title>
@@ -80,14 +81,14 @@
             <li>
               <input type="radio" name="2" id="Just a quick note to invite you to…/ to tell you that…" value="Just a quick note to invite you to…/ to tell you that…" />
               <div class="labelformat">
-                <label for="Just a quick note to invite you to…/ to tell you that…">只是想邀请你... /告诉你......</label>
+                <label for="Just a quick note to invite you to…/ to tell you that…">只是想邀请你... /告诉你...</label>
                 <label for="Just a quick note to invite you to…/ to tell you that…">Just a quick note to invite you to…/ to tell you that…</label>
               </div>
             </li>
             <li>
               <input type="radio" name="2" id="This is to invite you to join us for..." value="This is to invite you to join us for... "/>
               <div class="labelformat">
-                <label for="This is to invite you to join us for...">这请您参加...的邀请</label>
+                <label for="This is to invite you to join us for...">这请您参加...的邀请。</label>
                 <label for="This is to invite you to join us for...">This is to invite you to join us for...</label>
               </div>
             </li>
@@ -113,7 +114,9 @@
             <li>
               <input type="radio" name="3" id="I was wondering if you could come and see me sometime next week." value="I was wondering if you could come and see me sometime next week." />
               <div class="labelformat">
-                <label for="I was wondering if you could come and see me sometime next week.">我在想，你下周能不能过来和聚一下。</label>
+
+                <label for="I was wondering if you could come and see me sometime next week.">你想不想下周过来和聚一下。</label>
+                 <label for="I was wondering if you could come and see me sometime next week.">I was wondering if you could come and see me sometime next week.</label>
               </div>
             </li>
             <li>
