--- a/formalwithchinese.html
+++ b/formalwithchinese.html
@@ -1,4 +1,5 @@
-<html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="zh-cmn" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
     <title>Formal Email － English Email Writer by Christinazou</title>
