--- a/formalLetter.html
+++ b/formalLetter.html
@@ -37,13 +37,13 @@
       <div class="address">
         <div class="from">
           <label class="control-label">from:</label>
-          <input type="input" class="firstname" placeholder="first name"/>
-          <input type="input"  class="lastname" placeholder="last name"/>
+          <input type="text" class="firstname" placeholder="first name"/>
+          <input type="text"  class="lastname" placeholder="last name"/>
         </div>
         <div class="to">
           <label class="control-label">to:</label>
-          <input type="input" class="firstname" placeholder="first name"/>
-          <input type="input"  class="lastname" placeholder="last name"/>
+          <input type="text" class="firstname" placeholder="first name"/>
+          <input type="text"  class="lastname" placeholder="last name"/>
         </div>
       </div>
       <div class="greeting">
