--- a/formalwithchinese.html
+++ b/formalwithchinese.html
@@ -36,13 +36,13 @@
       <div class="address">
         <div class="from">
           <label class="control-label">发信人:</label>
-          <input type="input" class="firstname" placeholder="名"/>
-          <input type="input"  class="lastname" placeholder="姓"/>
+          <input type="text" class="firstname" placeholder="名"/>
+          <input type="text"  class="lastname" placeholder="姓"/>
         </div>
         <div class="to">
           <label class="control-label">收信人:</label>
-          <input type="input" class="firstname" placeholder="名"/>
-          <input type="input"  class="lastname" placeholder="姓"/>
+          <input type="text" class="firstname" placeholder="名"/>
+          <input type="text"  class="lastname" placeholder="姓"/>
         </div>
       </div>
       <div class="greeting">
