--- a/informalwithchinese.html
+++ b/informalwithchinese.html
@@ -30,21 +30,21 @@
     
     <div class="emailcontainer">
       <textarea id="email"> </textarea>
-      <input type="button" id="select_all_btn" value="select all" />
-      <input type="button" id="clear_all_btn" value="clear all" />
+      <input type="button" id="select_all_btn" value="全选" />
+      <input type="button" id="clear_all_btn" value="清除" />
     </div>
 
     <div class="selectcontainer">
       <div class="address">
         <div class="from">
           <label class="control-label">发信人:</label>
-          <input type="input" class="firstname" placeholder="名"/>
-          <input type="input"  class="lastname" placeholder="姓"/>
+          <input type="text" class="firstname" placeholder="名"/>
+          <input type="text"  class="lastname" placeholder="姓"/>
         </div>
         <div class="to">
           <label class="control-label">收信人:</label>
-          <input type="input" class="firstname" placeholder="名"/>
-          <input type="input"  class="lastname" placeholder="姓"/>
+          <input type="text" class="firstname" placeholder="名"/>
+          <input type="text"  class="lastname" placeholder="姓"/>
         </div>
         </div>
 
