--- a/formalwithchinese.html
+++ b/formalwithchinese.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh-cmn" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
-    <title>Formal Email － English Email Writer by Christinazou</title>
+    <title>Formal Email with Chinese Translation－ English Email Writer by Christinazou</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/afterReset.css" media="screen" />
