--- a/informalwithchinese.html
+++ b/informalwithchinese.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh-cmn" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en-us"  xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
-    <title>Informal Email － English Email Writer by Christinazou</title>
+    <title>Informal Email with Chinese Translation－ English Email Writer by Christinazou</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/afterReset.css" media="screen" />
@@ -236,6 +236,9 @@
           
         </div>
       </div>
-    <footer> Christinazou@2017 </footer>
+    <footer> <p>Christinazou@2017 
+Contact:
+<a href="mailto:christinazou2017@gmail.com?Subject=from%20email%20writer" target="_top">christinazou2017@gmail.com</a>
+</p></footer>
   </body>
 </html>
