add google adsense to test

--- a/informalLetter.html
+++ b/informalLetter.html
@@ -222,6 +222,9 @@
       
       </div>
     </div>
-            <footer> Christinazou@2017 </footer>
+             <footer> <p>Christinazou@2017 
+Contact:
+<a href="mailto:christinazou2017@gmail.com?Subject=from%20email%20writer" target="_top">christinazou2017@gmail.com</a>
+</p></footer>
   </body>
 </html>
