add writing to professor

--- a/formalLetter.html
+++ b/formalLetter.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8" />
@@ -24,6 +25,7 @@
       <a href="./index.html">Home</a>
       <a href="./formalLetter.html">Formal letter</a>
       <a href="./informalLetter.html">Informal letter</a>
+       <a href="./toprofessor.html">Writing to professor</a>
       <a class="navbarright" href="./formalwithchinese.html">中文版</a>
     </div>
     <!-- End Navigation -->
