--- a/informalLetter.html
+++ b/informalLetter.html
@@ -20,12 +20,13 @@
     <label for=""></label></li> -->
     
          <!-- Start Navigation -->
-        <div class="navbar">
-            <a href="./index.html">Home</a>
-            <a href="./formalLetter.html">Formal letter</a>
-            <a href="./informalLetter.html">Informal letter</a>
-              <a class="navbarright" href="./informalwithchinese.html">中文版</a>
-        </div>
+            <div class="navbar">
+      <a href="./index.html">Home</a>
+      <a href="./formalLetter.html">Formal letter</a>
+      <a href="./informalLetter.html">Informal letter</a>
+       <a href="./toprofessor.html">Writing to professor</a>
+      <a class="navbarright" href="./formalwithchinese.html">中文版</a>
+    </div>
         <!-- End Navigation -->
         
     <div class="emailcontainer">
