--- a/informalwithchinese.html
+++ b/informalwithchinese.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/afterReset.css" media="screen" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
     if (!window.jQuery) {
     document.write('<script src="lib/jquery.min.js"><\/script>')
     }
     </script>
-    <script src="js/main.js" type="text/javascript"></script>
+
+        <script src="js/jquery.min.js"></script>
+        <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/jsonoperater.js" type="text/javascript"></script>
     <script src="js/jsonoperater.js" type="text/javascript"></script>
   </head>
   <body>
