--- a/toprofessor.html
+++ b/toprofessor.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <!DOCTYPE html>
 <html lang="en-us" xmlns="http://www.w3.org/1999/xhtml">
   <head>
@@ -7,14 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="stylesheets/reset.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/afterReset.css" media="screen" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
     if (!window.jQuery) {
     document.write('<script src="lib/jquery.min.js"><\/script>')
     }
     </script>
-    <script src="js/checkbox.js" type="text/javascript"></script>
-    <script src="js/jsonoperater.js" type="text/javascript"></script>
+
+        <script src="js/jquery.min.js"></script>
+        <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/jsonoperater.js" type="text/javascript"></script>
+        <script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2842739458097342",
+    enable_page_level_ads: true
+  });
+</script>
   </head>
   <body>
     <!--      <li><input type="radio" name="6" id="" value="" /><div class="labelformat">
@@ -175,6 +183,15 @@
         </ul>
       </div>
     </div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- head -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:970px;height:90px"
+     data-ad-client="ca-pub-2842739458097342"
+     data-ad-slot="2668822720"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
            <footer> <p>Christinazou@2017 
 Contact:
 <a href="mailto:christinazou2017@gmail.com?Subject=from%20email%20writer" target="_top">christinazou2017@gmail.com</a>
